[project]
name = "hvppyphotopicker"
version = "0.1.0"
description = "A cross-platform GUI tool to group, preview, and pick photos from burst shots."
authors = [{ name="Your Name", email="you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt5",
    "Pillow",
    "opencv-python"
]

[project.scripts]
hvppyphotopicker = "hvppyphotopicker.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"